--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog Coming Soon</title>
+  <title>A blog hamarosan érkezik - cseteandor.hu</title>
   <style>
     body {
       font-family: Arial, sans-serif;
