--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="container">
     <h1>A blog hamarosan érkezik</h1>
     <p>Éppen a blog fejlesztésén dolgozom. Hamarosan elérhető lesz...</p>
-    <a href="www.cseteandor.hu" class="button">Vissza a kezdőlapra</a>
+    <a href="https://cseteandor.hu" class="button">Vissza a kezdőlapra</a>
   </div>
 </body>
 </html>
