--- a/new.html
+++ b/new.html
@@ -15,9 +15,9 @@
       height: 100vh;
       background-color: #f0f0f0;
       color: #333;
-        background-image: url('3B31AD0F-D05A-4AE6-9863-74850F60E358.jpeg');
-        background-repeat: no-repeat;
-        background-size: contain;
+      background-image: url('3B31AD0F-D05A-4AE6-9863-74850F60E358.jpeg');
+      background-repeat: no-repeat;
+      background-size: contain;
     }
 
     .container {
@@ -25,3 +25,36 @@
     }
 
     h1 {
+      font-size: 3em;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 1.2em;
+      margin-bottom: 30px;
+    }
+
+    .button {
+      display: inline-block;
+      padding: 10px 20px;
+      text-decoration: none;
+      background-color: #007bff;
+      color: #fff;
+      border-radius: 5px;
+      font-size: 1em;
+      transition: background-color 0.3s ease;
+    }
+
+    .button:hover {
+      background-color: #0056b3;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>A blog hamarosan érkezik</h1>
+    <p>Éppen a blog fejlesztésén dolgozom. Hamarosan elérhető lesz...</p>
+    <a href="https://cseteandor.hu" class="button">Vissza a kezdőlapra</a>
+  </div>
+</body>
+</html>
